fabrik/internal/engine/testdata/provider_bad_results.txt
Providers with more than one non-error result are rejected.
-- go.mod --
module app

go 1.26
-- main.go --
package main

import "os"

func main() { os.Exit(run()) }
-- web/web.go --
package web

type DB struct{}

type Pair struct{}

//fabrik:provider
func NewPair() (*Pair, *DB) { return nil, nil }
-- want/diags --
error: web/web.go:7:1: provider NewPair must return a value, optionally followed by a cleanup func() and an error
  help: examples: func New() (*T, error); func New() (*T, func(), error)
